[web] Fix stretched images bug
Summary:
Fix for [ENG-4371](https://linear.app/comm/issue/ENG-4371/short-images-get-stretched-on-web).

Screenshots for encrypted images:

{F633852}
{F633853}

Unencrypted images:

{F633855}
{F633854}

Test Plan: Run web app and check if images are stretched.

Reviewers: bartek, ashoat, tomek, inka

Reviewed By: bartek, ashoat

Subscribers: ashoat, tomek

Differential Revision: https://phab.comm.dev/D8483

--- a/web/media/media.css
+++ b/web/media/media.css
@@ -21,6 +21,10 @@ span.multimedia > .multimediaImage > video {
   max-height: 200px;
   max-width: 100%;
 }
+/* Prevent borders around images without src attribute */
+span.multimedia > .multimediaImage > img:not([src]) {
+  visibility: hidden;
+}
 span.multimedia > .multimediaImage svg.removeUpload {
   display: none;
   position: absolute;
